Fix alert toasts getting clipped

--- a/chrome/player/assets/sweetalert/css/sweetalert.css
+++ b/chrome/player/assets/sweetalert/css/sweetalert.css
@@ -255,6 +255,11 @@
     font-family: inherit;
     font-size: 1rem;
   }
+
+  div:where(.swal2-container) div:where(.swal2-toast) {
+    min-width: unset;
+  }
+
   div:where(.swal2-container) div:where(.swal2-popup):focus {
     outline: none;
   }
